--- a/src/Application/MainApp/main.fxml
+++ b/src/Application/MainApp/main.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -27,14 +31,9 @@
           </Menu>
         </menus>
       </MenuBar>
-      <HBox alignment="CENTER_LEFT" prefWidth="600.0">
-         <children>
-            <ScrollPane fitToHeight="true" hbarPolicy="NEVER" prefHeight="475.0" prefWidth="422.0">
-               <content>
-                  <VBox fx:id="contentBox" alignment="TOP_CENTER" fillWidth="false" />
-               </content>
-            </ScrollPane>
-            <GridPane alignment="CENTER" prefHeight="371.0" prefWidth="368.0">
+      <BorderPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+         <right>
+            <GridPane alignment="CENTER" prefHeight="475.0" prefWidth="414.0" BorderPane.alignment="CENTER">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -42,15 +41,47 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="addElementButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addElement" prefHeight="18.0" prefWidth="97.0" text="Add Element" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="addElementButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addElement" prefHeight="18.0" prefWidth="97.0" text="Add Element" GridPane.rowIndex="1" />
                   <Button fx:id="removeAllButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#removeAllElements" text="Remove All" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <Label fx:id="helpLab" layoutX="6.0" layoutY="71.0" text="Please select a directory" />
+                     </children>
+                  </Pane>
                </children>
             </GridPane>
-         </children>
-      </HBox>
+         </right>
+         <left>
+            <VBox prefHeight="475.0" prefWidth="386.0" style="-fx-border-color: lightgray; -fx-border-width: 0 2px 0 0;" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="384.0" spacing="30.0">
+                     <children>
+                        <Label text="Preview">
+                           <HBox.margin>
+                              <Insets left="25.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Name" />
+                        <Label text="Plastic" />
+                        <Label text="Colour" />
+                        <Label text="Quantity" />
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </HBox>
+                  <ScrollPane fitToHeight="true" hbarPolicy="NEVER" prefHeight="425.0" prefWidth="485.0" style="-fx-padding: 0; -fx-background-insets: 0;">
+                     <content>
+                        <VBox fx:id="contentBox" alignment="TOP_CENTER" fillWidth="false" />
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+         </left>
+      </BorderPane>
    </children>
 </VBox>
