--- a/src/Application/MainApp/main.fxml
+++ b/src/Application/MainApp/main.fxml
@@ -58,7 +58,7 @@
             <TableColumn fx:id="colourColumn" minWidth="30.0" prefWidth="-1.0" text="Colour" />
             <TableColumn fx:id="quantityColumn" minWidth="30.0" prefWidth="-1.0" text="Quantity" />
             <TableColumn fx:id="resolutionColumn" minWidth="-1.0" prefWidth="-1.0" text="Resolution" />
-            <TableColumn fx:id="resolutionColumn1" minWidth="-1.0" prefWidth="-1.0" text="Notes" />
+            <TableColumn fx:id="notesColumn" minWidth="-1.0" prefWidth="-1.0" text="Notes"/>
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
