--- a/src/Application/light_style.css
+++ b/src/Application/light_style.css
@@ -51,3 +51,17 @@ CSS For light theme Prodpoint Application
     -fx-focus-color: red;
     -fx-border-radius: 2px;
 }
+
+.completed-button {
+    -fx-background-color: #00aa00;
+    -fx-background-radius: 15;
+    -fx-text-fill: black;
+    -fx-padding: 5px;
+}
+
+.processing-button {
+    -fx-background-color: yellow;
+    -fx-background-radius: 15;
+    -fx-text-fill: black;
+    -fx-padding: 5px;
+}
