--- a/src/Application/MainApp/main.fxml
+++ b/src/Application/MainApp/main.fxml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="1143.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.MainApp.MainController">
    <children>
       <MenuBar>
@@ -25,9 +33,8 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Project">
                <items>
-                  <MenuItem fx:id="importFilesButton" mnemonicParsing="false" onAction="#openImportWindow" text="Import files from folder" />
-                   <MenuItem fx:id="importSingleFile" mnemonicParsing="false" onAction="#importFileToProject"
-                             text="Import single file"/>
+                  <MenuItem fx:id="importFilesButton" disable="true" mnemonicParsing="false" onAction="#openImportWindow" text="Import files from folder" />
+                   <MenuItem fx:id="importSingleFile" disable="true" mnemonicParsing="false" onAction="#importFileToProject" text="Import single file" />
                </items>
             </Menu>
           <Menu mnemonicParsing="false" text="Options">
@@ -35,12 +42,10 @@
               <MenuItem mnemonicParsing="false" text="Toggle Dark Mode" />
             </items>
           </Menu>
-            <Menu mnemonicParsing="false" text="DEBUG">
+            <Menu mnemonicParsing="false" text="DEBUG" visible="false">
                 <items>
-                    <MenuItem fx:id="removeFiles" mnemonicParsing="false" onAction="#removeAllProjectFiles"
-                              text="Remove all items from dataset"/>
-                    <MenuItem fx:id="refreshTable" mnemonicParsing="false" onAction="#debugRefreshTable"
-                              text="Refresh Table"/>
+                    <MenuItem fx:id="removeFiles" mnemonicParsing="false" onAction="#removeAllProjectFiles" text="Remove all items from dataset" />
+                    <MenuItem fx:id="refreshTable" mnemonicParsing="false" onAction="#debugRefreshTable" text="Refresh Table" />
                 </items>
             </Menu>
         </menus>
@@ -59,7 +64,7 @@
             <TableColumn fx:id="colourColumn" minWidth="30.0" prefWidth="-1.0" text="Colour" />
             <TableColumn fx:id="quantityColumn" minWidth="30.0" prefWidth="-1.0" text="Quantity" />
             <TableColumn fx:id="resolutionColumn" minWidth="-1.0" prefWidth="-1.0" text="Resolution" />
-            <TableColumn fx:id="notesColumn" minWidth="-1.0" prefWidth="-1.0" text="Notes"/>
+            <TableColumn fx:id="notesColumn" minWidth="-1.0" prefWidth="-1.0" text="Notes" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -82,7 +87,7 @@
             </Label>
             <Label text="Client:" visible="false">
                <font>
-                   <Font name="System Bold Italic" size="17.0"/>
+                   <Font name="System Bold Italic" size="17.0" />
                </font>
                <HBox.margin>
                   <Insets right="-20.0" />
@@ -95,7 +100,7 @@
             </Label>
             <Label text="Last Modified:" visible="false">
                <font>
-                   <Font name="System Bold Italic" size="17.0"/>
+                   <Font name="System Bold Italic" size="17.0" />
                </font>
                <HBox.margin>
                   <Insets right="-20.0" />
@@ -108,7 +113,7 @@
             </Label>
             <Label text="Due:" visible="false">
                <font>
-                   <Font name="System Bold Italic" size="17.0"/>
+                   <Font name="System Bold Italic" size="17.0" />
                </font>
                <HBox.margin>
                   <Insets right="-20.0" />
@@ -119,17 +124,16 @@
                   <Font size="17.0" />
                </font>
             </Label>
-             <HBox alignment="CENTER_LEFT" prefHeight="78.0" prefWidth="154.0" spacing="10.0" visible="false"
-                   HBox.hgrow="NEVER">
+             <HBox alignment="CENTER_LEFT" prefHeight="78.0" prefWidth="204.0" spacing="10.0" visible="false" HBox.hgrow="NEVER">
                <children>
                    <Label fx:id="statusLabel" text="Status:">
                      <font>
-                         <Font name="System Bold Italic" size="17.0"/>
+                         <Font name="System Bold Italic" size="17.0" />
                      </font>
                   </Label>
                    <Button fx:id="statusButton" mnemonicParsing="false" styleClass="status-button" text="Processing">
                        <font>
-                           <Font size="14.0"/>
+                           <Font size="14.0" />
                        </font>
                    </Button>
                </children>
